0.5.4/_sources/api/napari.layers.Surface.rst
napari.layers.Surface
=====================

.. currentmodule:: napari.layers

.. autoclass:: Surface
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Surface.as_layer_data_tuple
   
   
      ~Surface.bind_key
   
   
      ~Surface.block_update_properties
   
   
      ~Surface.click_plane_from_click_data
   
   
      ~Surface.create
   
   
      ~Surface.data_to_world
   
   
      ~Surface.get_ray_intersections
   
   
      ~Surface.get_source_str
   
   
      ~Surface.get_status
   
   
      ~Surface.get_value
   
   
      ~Surface.projected_distance_from_mouse_drag
   
   
      ~Surface.refresh
   
   
      ~Surface.reset_contrast_limits
   
   
      ~Surface.reset_contrast_limits_range
   
   
      ~Surface.save
   
   
      ~Surface.set_view_slice
   
   
      ~Surface.update_transform_box_visibility
   
   
      ~Surface.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Surface.ModeCallable
      ~Surface.affine
      ~Surface.axis_labels
      ~Surface.blending
      ~Surface.bounding_box
      ~Surface.class_keymap
      ~Surface.colormap
      ~Surface.colormaps
      ~Surface.contrast_limits
      ~Surface.contrast_limits_range
      ~Surface.cursor
      ~Surface.cursor_size
      ~Surface.data
      ~Surface.dtype
      ~Surface.editable
      ~Surface.experimental_clipping_planes
      ~Surface.extent
      ~Surface.faces
      ~Surface.feature_defaults
      ~Surface.features
      ~Surface.gamma
      ~Surface.help
      ~Surface.interactive
      ~Surface.keymap
      ~Surface.loaded
      ~Surface.metadata
      ~Surface.mode
      ~Surface.mouse_pan
      ~Surface.mouse_zoom
      ~Surface.name
      ~Surface.ndim
      ~Surface.normals
      ~Surface.opacity
      ~Surface.projection_mode
      ~Surface.rotate
      ~Surface.scale
      ~Surface.shading
      ~Surface.shear
      ~Surface.source
      ~Surface.texcoords
      ~Surface.texture
      ~Surface.thumbnail
      ~Surface.translate
      ~Surface.unique_id
      ~Surface.units
      ~Surface.vertex_colors
      ~Surface.vertex_values
      ~Surface.vertices
      ~Surface.visible
      ~Surface.wireframe
      
      
      
      
      
   
   

   .. rubric:: Details